# flower-vending-system

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-ui.txt  requirements.txt  sitecustomize.py
.github/workflows/: build-release.yml
config/examples/: machine.linux.yaml  machine.simulator.yaml  machine.windows.yaml
config/targets/: machine.debian13-target.yaml
docs/: NEW_PROJECT_DOCUMENTATION.md  README.md  cleanup-audit-2026-04-16.md  developer-guide-ru.md  flower-vending-system-project-documentation.docx  future-requests-plan.txt  operations-runbook.md  phase-01-architecture.md  phase-02-project-structure.md  phase-03-domain-fsm.md  phase-06-simulators-mocks.md  phase-07-persistence-config.md  phase-09-tests.md  phase-10-real-hardware-integration.md  platform-abstractions.md  production-readiness.md  project-documentation-ru.md  technical-guide-ru.md  user-guide-ru.md
docs/adr/: ADR-0001-layered-architecture.md  ADR-0002-journal-first-recovery.md  (+11 more)
flower_vending/: __init__.py  __main__.py
packaging/: build_release.py
scripts/: build-linux-release.sh  build-windows-release.bat  check_repository_hygiene.py  collect-linux-hardware-inventory.sh  collect-windows-hardware-inventory.ps1  generate_project_documentation_docx.py  reset-demo-and-run-ui.bat  run-diagnostics.bat  run-diagnostics.sh  run-service-mode.bat  run-service-mode.sh  run-simulator-runtime.bat  run-simulator-runtime.sh  run-simulator-ui.bat  run-simulator-ui.sh  ui_smoke_check.py  validate-config.bat  validate-config.sh  verify_project.py
tests/: _support.py
(+174 files in other folders)
